<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <data>

        <variable
            name="viewModel"
            type="com.test.healthbox_app.presentation.onboarding.checkin.MachineCheckInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient">

        <ImageView
            android:layout_width="345dp"
            android:layout_height="148dp"
            android:layout_marginVertical="50dp"
            android:src="@drawable/hal_logo_square"
            android:tag="hal_logo"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blur_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                style="@style/SubTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:text="@string/enter_your_machine_s_unique_id_below_to_access_the_system"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/machine_id_text_field"
                style="@style/Widget.App.TextInputLayout.Outlined.Purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="30dp"
                android:hint="@string/machine_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/machine_id_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.machineId}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/machine_password_text_field"
                style="@style/Widget.App.TextInputLayout.Outlined.Purple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="100dp"
                android:layout_marginVertical="20dp"
                android:hint="@string/machine_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machine_id_text_field"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/machine_password_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:inputType="textPassword"
                    android:text="@={viewModel.machinePassword}" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/machine_name_text"
                style="@style/SubTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/are_you_sure_you_want_to_check_in_to_s"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machine_password_text_field" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_submit"
                style="@style/ButtonTextStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:background="@drawable/button_style"
                android:text="@string/submit_text"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_check_in"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/machine_name_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_check_in"
                style="@style/ButtonTextStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:background="@drawable/button_style"
                android:text="Check In"
                android:textAllCaps="false"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_submit"
                app:layout_constraintTop_toBottomOf="@+id/machine_name_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>


